azure-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /DevOps
            pathType: Prefix
            backend:
              service:
                name: devops-api-svc
                port:
                  number: 80
